--- a/wf/templates/layout.html
+++ b/wf/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}互众工作流平台{% endblock%}</title>
+    <link rel="shortcut icon" href="{{ url_for('favicon') }}">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" media="all" />
     {% block head_css %}{% endblock %}
@@ -48,6 +49,7 @@
         </header> 
         
         <div id="main" class="row">
+            {% if "'" + config.SESSION_REAL_NAME  + "'" in session %}
             <div class="span2" style="width:108px;">
                 <div class="well sidebar-nav">
                     <ul class="nav nav-list">
@@ -58,8 +60,8 @@
                         <li {% if g.homePath == "notice" %} class="active"{% endif %}><a href="/notice/my">我的收文</a></li>
                     </ul>
                 </div>
-            
             </div>
+            {% endif %}
 
             {% block main %}{% endblock %}
         </div>
