--- a/wf/templates/layout.html
+++ b/wf/templates/layout.html
@@ -11,7 +11,7 @@
     {#
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-responsive.min.css') }}" media="all" />
     #}
-    <link rel="stylesheet" href="{{ url_for('static', filename='c/mc.css') }}" media="all" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='c/wf.css') }}" media="all" />
     <script src="{{ url_for('static', filename='jquery-1.7.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='k.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
@@ -71,7 +71,7 @@
     <div id="popup-msg" class="alert" style="display:none"></div>
     </div>
     
-    <footer style="text-align:center;">
+    <footer style="text-align:center; margin-top: 180px;">
         <p>Adeaz Work Flow V0.1 By Tech Department! I LIKE PYTHON, WE NEED PYTHONIC, & U WILL LIKE PYTHON & LOVE ME ^v^, WILL U ?</p>
     </footer>
 
