--- a/wf/templates/wf/test.html
+++ b/wf/templates/wf/test.html
@@ -382,7 +382,8 @@
                         <td>
                             <span class="preview">
                                 {% if (file.thumbnailUrl) { %}
-                                    <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" data-gallery><img style="width: 50px;" src="{%=file.thumbnailUrl%}"></a>
+                                <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" data-gallery><img style="width: 50px;" src="{%=file.thumbnailUrl%}">
+                                </a>
                                 {% } %}
                             </span>
                         </td>
