--- a/wf/templates/wf/test.html
+++ b/wf/templates/wf/test.html
@@ -288,8 +288,15 @@
             <div class="controls">
                 <a href="#myUpload" role="button" class="btn btn-info" data-toggle="modal">上传附件</a> <span id="filenum"></span>
                 <br />
-                <ul class="thumbnails" id="pic">
-                </ul>
+            </div>
+        </div>
+        
+        <div class="control-group">
+            <label class="control-label">
+                其他说明
+            </label>
+            <div class="controls">
+                <textarea name="des" style="width:500px; height:100px;" placeholder="100字以内" id="des"></textarea>
             </div>
         </div>
 
